--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #FFFFFF;
+	background-image: url("http://lyreks.github.io/resources/TankMetaBG.jpg");
+	background-color: #000000;
 }
 
 h1 {
