--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+@-ms-viewport {
+	width: device-width;
+	zoom: 1;
+}
+@-o-viewport {
+	width: device-width;
+	zoom: 1;
+}
+@viewport {
+	width: device-width;
+	zoom: 1;
+}
+
 @font-face {
    font-family:BebasKai;
    src: url('assets/BebasKai-Regular.ttf');
